<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget"/>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>22</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <widget class="QMenu" name="menuOpen">
     <property name="title">
      <string>Open</string>
     </property>
     <addaction name="openPNG"/>
     <addaction name="openTXT"/>
    </widget>
    <widget class="QMenu" name="menuSave">
     <property name="title">
      <string>Save</string>
     </property>
     <addaction name="saveTXT"/>
     <addaction name="savePNG"/>
    </widget>
    <addaction name="menuOpen"/>
    <addaction name="menuSave"/>
   </widget>
   <addaction name="menuFile"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="openPNG">
   <property name="text">
    <string>As PNG</string>
   </property>
  </action>
  <action name="openTXT">
   <property name="text">
    <string>As TXT</string>
   </property>
  </action>
  <action name="saveTXT">
   <property name="text">
    <string>As TXT</string>
   </property>
  </action>
  <action name="savePNG">
   <property name="text">
    <string>As PNG</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
